# PythonPackageExample

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: plot_example.py
src/package_example/: example.py
src/package_example/calculator/: ops.py
src/package_example/plot/: plotter.py
src/package_example/utils/: conversions.py
tests/: test_conversions.py  test_example.py  test_mod.py  test_ops.py
