[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "package_example"
version = "0.0.1"
authors = [
  { name="Bojan Sofronievski", email="bojan.drago@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BojanSof/PythonPackageExample"
"Bug Tracker" = "https://github.com/BojanSof/PythonPackageExample/issues"